<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/imgPersonAvatar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/avatar_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/avatar_1" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_icon_desc"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/ItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_label_name"
        app:layout_constraintStart_toEndOf="@+id/imgPersonAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textView4,tvPhoneLabel,textView6,Email" />

    <TextView
        android:id="@+id/tvName"
        style="@style/ItemValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="tvName"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvPhoneLabel"
        style="@style/ItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_label_phone"
        app:layout_constraintStart_toEndOf="@+id/imgPersonAvatar"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvPhone"
        style="@style/ItemValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="tvPhone"
        app:layout_constraintBottom_toBottomOf="@+id/tvPhoneLabel"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        app:layout_constraintTop_toTopOf="@+id/tvPhoneLabel"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView6"
        style="@style/ItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_label_dob"
        app:layout_constraintStart_toEndOf="@+id/imgPersonAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneLabel" />

    <TextView
        android:id="@+id/tvDoB"
        style="@style/ItemValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="tvDoB"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Email"
        style="@style/ItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_label_email"
        app:layout_constraintStart_toEndOf="@+id/imgPersonAvatar"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/ItemValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="tvEmail"
        app:layout_constraintBottom_toBottomOf="@+id/Email"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        app:layout_constraintTop_toTopOf="@+id/Email"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
